Fix scroll overlap bug
Added plugins and wrote JS to fix the previous scroll overlap bug

--- a/src/css/input.css
+++ b/src/css/input.css
@@ -73,5 +73,5 @@ canvas {
 }
 
 * {
-    border: 1px dotted red;
+    /* border: 1px dotted red;
 }
